fix [slider] : img bug on firefox

--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -70,6 +70,7 @@
     right: 0;
     img {
       height: 100%;
+      max-width: 350px;
       width: fit-content;
     }
   }
